<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.cityblack.game</groupId>
    <artifactId>netty-server</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>
    <description>Game server with netty</description>
    <modules>
        <module>framework</module>
        <module>business</module>
        <module>game-start</module>
        <module>parent</module>
        <module>dependencies</module>
    </modules>

    <properties>
        <revision>0.1.10</revision>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <url>https://github.com/cityblack/netty-game-serve</url>

    <scm>
        <url>https://github.com/cityblack/netty-game-server</url>
        <connection>scm:git:git://github.com/cityblack/netty-game-server.git</connection>
        <developerConnection>scm:git:ssh://github.com/cityblack/netty-game-server.git</developerConnection>
    </scm>

    <developers>
        <developer>
            <name>zehong.l</name>
            <email>867708644@qq.com</email>
            <url>https://github.com/cityblack</url>
        </developer>
    </developers>

    <build>
        <plugins>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.6.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <excludeArtifacts>game-start,framework,business</excludeArtifacts>
                    <autoPublish>false</autoPublish>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <additionalJOption>-Xdoclint:none</additionalJOption>
                    <skippedModules>parent,dependencies,framework,netty-server,game-start</skippedModules>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>utf-8</encoding>
                    <parameters>true</parameters>
                    <compilerArgs>
                        <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/sun.reflect.generics.visitor=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/sun.reflect.generics.tree=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/sun.reflect.generics.scope=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/sun.reflect.generics.parser=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/sun.reflect.generics.factory=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <skip>true</skip>
                    <argLine>
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED
                        --add-opens=java.base/sun.reflect.generics.visitor=ALL-UNNAMED
                        --add-opens=java.base/sun.reflect.generics.tree=ALL-UNNAMED
                        --add-opens=java.base/sun.reflect.generics.scope=ALL-UNNAMED
                        --add-opens=java.base/sun.reflect.generics.parser=ALL-UNNAMED
                        --add-opens=java.base/sun.reflect.generics.factory=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
            </plugin>
        </plugins>
    </build>

</project>
